# halloy

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: changelog.yml  checksum.yml  nightly.yml  release.yml
book/src/: README.md
crates/data/: Cargo.toml  build.rs
crates/data/src/: appearance.rs  audio.rs  config.rs
crates/ipc/: Cargo.toml
crates/irc/: Cargo.toml
crates/irc_proto/: Cargo.toml
crates/theme/: Cargo.toml
crates/theme/src/: lib.rs
data/src/: buffer.rs  client.rs  history.rs  message.rs
irc/proto/src/: command.rs
src/: appearance.rs  buffer.rs  main.rs
src/appearance/: theme.rs
src/buffer/: list.rs
src/screen/: dashboard.rs
src/screen/dashboard/: pane.rs  sidebar.rs
