[package]
name = "halloy"
description = "Halloy IRC Client"
documentation = "https://halloy.squidowl.org/"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = []
debug = ["iced/debug"]
dev = ["debug", "data/dev"]

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
authors = ["Casper Rogild Storm", "Cory Forsstrom"]
license = "GPL-3.0-or-later"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.97"
async-http-proxy = "1.2.5"
base64 = "0.22.1"
bytes = "1.10.1"
bytesize = "2.0.1"
chrono = "0.4.40"
const_format = "0.2.32"
derive_more = "2.0.1"
dirs-next = "2.0.0"
emojis = "0.6.4"
fancy-regex = "0.14"
fast-socks5 = "0.10.0"
fern = "0.7.1"
flate2 = "1.0"
futures = "0.3.30"
hex = "0.4.3"
html-escape = "0.2.13"
humantime = "2.1.0"
iced_core = "0.14.0-dev"
image = "0.25.5"
interprocess = "1.2.1"
itertools = "0.14.0"
log = "0.4.26"
nom = "7.1"
notify-rust = "4.11"
once_cell = "1.20.3"
open = "5.0.1"
palette = "0.7.4"
rand = "0.9.0"
rand_chacha = "0.9.0"
reqwest = "0.12"
rodio = "0.20.1"
rustls-native-certs = "0.8.1"
rustls-pemfile = "2.1.1"
seahash = "4.1.0"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10.8"
strsim = "0.11.1"
strum = "0.27.1"
thiserror = "2.0.12"
timeago = "0.4.2"
tokio = "1.44.0"
tokio-stream = "0.1"
tokio-util = "0.7"
toml = "0.8.11"
unicode-segmentation = "1.6"
url = "2.5.0"
uuid = "1.15"
walkdir = "2.5.0"
xdg = "2.5.2"
xz2 = "0.1.7"

arti-client = { version = "0.26", default-features = false }
iced = { version = "0.14.0-dev", default-features = false }
rfd = { version = "0.15.2", default-features = false }
tokio-rustls = { version = "0.26.0", default-features = false }

dark-light = { git = "https://github.com/rust-dark-light/dark-light", rev = "8e1f745f91e1e805fa772a83e4744afe95d70aa1" }

[dependencies]
data = { path = "crates/data" }
ipc = { path = "crates/ipc" }

anyhow.workspace = true
bytesize.workspace = true
chrono.workspace =  true
emojis.workspace = true
fern.workspace = true
futures.workspace = true
humantime.workspace = true
itertools.workspace = true
log.workspace = true
notify-rust.workspace = true
once_cell.workspace = true
open.workspace = true
palette.workspace = true
rand_chacha.workspace = true
rand.workspace = true
rodio.workspace = true
strsim.workspace = true
strum.workspace = true
thiserror.workspace = true
timeago.workspace = true
unicode-segmentation.workspace = true
url.workspace = true
dark-light.workspace = true

iced = { workspace = true, features = ["wgpu", "tiny-skia", "fira-sans", "tokio", "lazy", "advanced", "image"] }
rfd = { workspace = true, features = ["xdg-portal", "tokio"] }
tokio-stream = { workspace = true, features = ["fs"] }
tokio = { workspace = true, features = ["rt", "fs", "process"] }
uuid = { workspace = true, features = ["v4"] }

[target.'cfg(windows)'.dependencies]
image = "0.24.6"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.2"
windows_exe_info = "0.4"

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced", rev = "fd5ed0d0a6e84b3c036ff8e1f0d62d383d4b1e82" }
iced_core = { git = "https://github.com/iced-rs/iced", rev = "fd5ed0d0a6e84b3c036ff8e1f0d62d383d4b1e82" }

[profile.ci]
inherits = "dev"
opt-level = 0

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
