[package]
name = "data"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
dev = []

[dependencies]
irc = { path = "../irc" }
theme = { path = "../theme" }

anyhow.workspace = true
base64.workspace = true
bytes.workspace = true
const_format.workspace = true
dirs-next.workspace = true
emojis.workspace = true
fancy-regex.workspace = true
flate2.workspace = true
futures.workspace = true
hex.workspace = true
html-escape.workspace = true
iced_core.workspace = true
image.workspace = true
itertools.workspace = true
log.workspace = true
nom.workspace = true
once_cell.workspace = true
palette.workspace = true
rand_chacha.workspace = true
rand.workspace = true
seahash.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
timeago.workspace = true
toml.workspace = true
walkdir.workspace = true
xdg.workspace = true

chrono = { workspace = true, features = ['serde'] }
derive_more = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
tokio-stream = { workspace = true, features = ["time", "fs"] }
tokio = { workspace = true, features = ["io-util", "fs"] }
url = { workspace = true, features = ["serde"] }
